# StagedS0R0

./: .gitignore  dune-project  msp_eff.opam
ex/: ex1.txt  ex2.txt  ex3.txt  ex4.txt  ex5.txt  ex6.txt  ex7.txt  ex8.txt
lib/: aux.ml  builtin.ml  dune  eval.ml  eval.mli  front.ml  infer.ml  infer.mli  lexer.mll  parser.mly  parser_wrap.ml  parser_wrap.mli  subst.ml  syntax.ml  top.ml  trans.ml
lib/common/: all.ml  dune  ext.ml  logging.ml  myutil.ml  persistence.ml
test/: dune  eval.ml  infer.ml  parser.ml
